--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <
-            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg">
+            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg" width="400px" height="300px"/>
             <a class="button" href="">Знижки</a>
         </header>
         <nav>
@@ -26,13 +26,13 @@
                 </article>
                 <article>
                     <h2>Як вибрати навушники</h2>
-                    <img src="https://learn.logikaschool.com/uploads/2021/02/music-1813100_1280_0_1613586010.png"/>
+                    <img src="https://learn.logikaschool.com/uploads/2021/02/music-1813100_1280_0_1613586010.png" width="330px" height="300px"/>
                     <p>Поговоримо про новинки</p>
                     <a class="article-but" href="">Детальніше</a>
                 </article>
                 <article>
                     <h2>Телефон мрії</h2>
-                    <img src="https://learn.logikaschool.com/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg"/>
+                    <img src="https://learn.logikaschool.com/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg" width="400px" height="300px"/>
                     <p>Apple iphone 13</p>
                     <a class="article-but" href="">Детальніше</a>
                 </article>
