--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <
-            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg" width="400px" height="300px"/>
+            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg"width="400px" height="300px"/>
             <a class="button" href="">Знижки</a>
         </header>
         <nav>
@@ -20,7 +20,7 @@
             <section class="info">
                 <article>
                     <h2>Лептоп для відпочинку</h2>
-                    <img src="https://learn.logikaschool.com/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg"/>
+                    <img src="https://learn.logikaschool.com/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg" width="330px" height="300px"/>
                     <p>Samsung V145-S</p>
                     <a class="article-but" href="">Детальніше</a>
                 </article>
