--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <
-            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg"width="400px" height="300px"/>
+            <img src="https://learn.logikaschool.com/uploads/2021/02/logo_0_1613588860.svg" width="400px" height="300px"/>
             <a class="button" href="">Знижки</a>
         </header>
         <nav>
@@ -43,11 +43,11 @@
                     <a class="article-but" href="">Детальніше</a>
                 </article>
             </section>
-            <img src="/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width="960" height="270"/>
+            <img src="https://learn.logikaschool.com/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg width="960" height="270"/>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href=""><img src="https://learn.logikaschool.com/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" height="80px"></a>
+            <a href=""><img src="https://learn.logikaschool.com/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
             <p><b>Напиши - отримай <br/> промокод!</b></p> 
         </footer>
     </body>
